# Leaf

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.MD  docker-compose.yml  leaf-investigador.md  leaf.db  pyproject.toml
backend/: config.py  main.py  scheduler.py
backend/agents/: dian.py  insights.py  investigador.py  ocr.py  orchestrator.py  router.py  transactions.py
backend/api/routes/: alerts.py  budgets.py  chat.py  dashboard.py  health.py  import_export.py  investigador.py  ocr.py  profiles.py  savings_goals.py  subscriptions.py  (+2 more)
backend/db/: database.py
backend/models/: alert.py  budget.py  investigador_config.py  savings_goal.py  transaction.py  user_profile.py
backend/services/: alert_checker.py  groq_stt.py  health_calculator.py  model_downloader.py  phi4_voice.py  stt_factory.py  tax_calculator.py  telegram_bot.py  voice_stt.py  voice_tts.py
backend/tools/: analyze_patterns.py  analyze_weekday.py  calcular_deducciones.py  calcular_gmf.py  calcular_retencion.py  calculate_renta.py  calculate_savings_goal.py  cdt_live_rates.py  check_budget.py  check_deadlines.py  check_obligacion.py  csv_importer.py  delete_transaction.py  detect_anomaly.py  dian_factura.py  edit_transaction.py  emergency_fund_status.py  explain_concept.py  export_tools.py  extract_receipt.py  find_idle_money.py  find_subscriptions.py  formulario_210.py  generar_borrador.py  generate_insight_report.py  generate_report.py  get_cdt_rates.py  get_uvt.py  health_tools.py  predict_expenses.py  query_history.py  register_expense.py  register_income.py  savings_goal_tools.py  set_budget.py  summarize_month.py  take_home_tools.py  whatif_simulator.py
backend/voice/: pipecat_pipeline.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.html
openclaw-skill/: leaf.instructions.md  leaf.skill.json
(+23 files in other folders)
