[project]
name = "leaf"
version = "2.0.0"
description = "Agente financiero personal colombiano — local-first"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    # Voice features
    "groq>=0.11.0",
    "langchain-groq>=0.2.0",
    "gtts>=2.5.0",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
